Exception message for expressions with multiple bracket accesses is inconsistent / incorrect https://bugs.webkit.org/show_bug.cgi?id=163426

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-10-13
Reviewed by Geoffrey Garen.

JSTests:

* ChakraCore/test/Error/CallNonFunction_3.baseline-jsc:
* ChakraCore/test/Object/null.baseline-jsc:
* stress/exception-in-to-property-key-should-be-handled-early.js:
Better exception messages.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrackCue/endTime-expected.txt:
* web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrackCue/id-expected.txt:
* web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrackCue/pauseOnExit-expected.txt:
* web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrackCue/startTime-expected.txt:
* web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrackCue/track-expected.txt:
Better expection messages.

Source/JavaScriptCore:

* bytecompiler/NodesCodegen.cpp:
(JSC::BracketAccessorNode::emitBytecode):
It matters where emitExpressionInfo is called since it gathers
info about where we are in the instruction stream. We need to
emit it before the bytecode that we want to associate the data
with. In this case, before the getById / getByVal.

LayoutTests:

* js/exception-expression-offset-expected.txt:
* js/script-tests/exception-expression-offset.js:
(testException):
Correct existing tests and add new tests for multiple and intermixed
dot / bracket accesses.

Canonical link: https://commits.webkit.org/181245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207326 268f45cc-cd09-0410-ab3c-d52691b4dbfc